# carepilot-dashboard

./: .env  .gitignore  Dockerfile  MakeFile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
backend/: alembic.ini  db.py  main.py  redis_client.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 33fa057b315b_init_all_models.py  ead1845a6a6e_init_all_models.py
backend/config/: settings.py
backend/models/: __init__.py  umixin.py  user.py
backend/routers/: auth.py  chart.py  daily_logs.py  daily_vitals.py  dashboard.py  goal.py  history.py  histroy.py  profile.py  record.py  records.py
backend/schemas/: __init__.py  chart.py  dailylog.py  dailyrecord.py  goal.py  profile.py  token.py  user.py  vitalsign.py
backend/services/: jwt_token.py  otp.py  redis.py  redis_otp.py  smtp.py  stats.py  stmp.py
backend/templates/emails/: otp.html
dashboard/: app.py
dashboard/pages/: daily.py  history.py  home.py  login.py  logout.py  profile.py  register.py  stats.py  verify.py
dashboard/utils/: page_registry.py
tests/: conftest.py  test_auth.py  test_goal.py  test_setup.py  test_smtp.py
