[project]
name = "carepilot"
version = "0.1.0"
description = "A self-care health tracking web application"
authors = ["maudes"]
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "altair>=5.5.0",
    "fastapi>=0.110.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "streamlit==1.46.1",
    "pyarrow>=15,<16",
    "pandas>=2.2.0",
    "uvicorn>=0.27.0",
    "weasyprint>=60.0",
    "alembic>=1.13.0",
    "python-dotenv==1.1.1", 
    "pydantic-settings==2.10.1",
    "upstash-redis>=1.4.0",
    "httpx>=0.27.0",
    "jinja2>=3.0.0",
    "fastapi-mail>=1.5.0",
    "python-jose>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "black>=24.3.0",
    "isort>=5.12.0",
    "mypy>=1.8.0"
]
visual = [
 "pillow",
]
